# HERO21-VISION-CODE

./: .gitignore  CMakeLists.txt  README.md  monitor.sh
Config/: base.h  param.xml
src/: main.cpp
src/aimbot/: aimbot.cpp  aimbot.h
src/aimbot/antigyro/: antigyro.cpp  solve_armor_angle.cpp
src/aimbot/armor/: armor.cpp  armor.h
src/aimbot/armor_detect/findlightbars/: findlightbars.cpp
src/aimbot/armor_detect/grade_armors/: grade_armors.cpp
src/aimbot/armor_detect/image_process/: image_process.cpp
src/aimbot/armor_predict/: armor_predict.cpp  armor_predict.h
src/aimbot/others/init/: init.cpp
src/camera/: camera.h
src/camera/mvcamera/: mvcamera.cpp  mvcamera.h
src/communication/can/: cannode.cpp  cannode.h
src/communication/can_to_debug/: can_to_debug.cpp  can_to_debug.h
src/hit_sentinel/: hit_sentinel.cpp  hit_sentinel.h
src/runesolver/fit_rune_motion/: runedescription.h  runedescrption.cpp
src/runesolver/runedetector/: runedetector.cpp  runedetector.h
src/runesolver/runepredictor/: runepredictor.cpp  runepredictor.h
src/target_solve/: targetsolver.cpp  targetsolver.h
src/tools/: log.h  types.h
src/tools/debugger/: debugger.cpp  debugger.h
src/tools/macros/: macro_switch.h
src/tools/queues/: circlequeue.h  sj_queue.h
src/tools/timer/: systime.cpp  systime.h  timer.cpp  timer.h
src/tools/util_func/: util_func.cpp  util_func.h
src/workspace/: workspace.cpp  workspace.h
src/workspace/get_img_thread/: get_image_thread.cpp
src/workspace/img_process_thread/: image_process_thread.cpp
src/workspace/others/: others.cpp
(+19 files in other folders)
